@@ -3,6 +3,7 @@ AlcoBot v0.5.0 (not released):
   NEW: Asynchronous FTP client library with SSL and TLS support.
   NEW: Expanded zipscript support to include ioSFV (_tUFF) and Project-ZS (Caladan/esmandil).
   NEW: File listing all available variables (generated by makeVarRef.tcl).
+  NEW: List commands on the configuration dump (.alcobot dump).
   NEW: Rewrote the command interface, proper support for aliases and flag checking.
   NEW: The "ftpd" module now maintains a connection to the FTP server.
   CHG: Removed the "cmdPrefix" option from [Module::Free].
